# gl-streaming

./: .astylerc  .gitignore  .mailmap  INTERNALS.md  Makefile  README.md  README.shodruky-rhyammer.md  TODO.md  USAGE.md  meson.build  meson_options.txt
android_gl_server/jni/: Android.mk  glstreaming_jni.cpp  utils.h
android_gl_server/libs/armeabi/: gdb.setup
android_gl_server/libs/armeabi-v7a/: gdb.setup
android_gl_server/libs/x86/: gdb.setup
benchmarks/glmark2/: glmark2md.py
benchmarks/glmark2/AMD-Renoir_Qubes4.1/800x600-windowed/: Makefile  dom0  dom0-stdio  dom0-tcp  dom0-unixshm  qrexecpipe-socat-tcp  qrexecpipe-stdio  qrexecpipe-stdio-eventfdnotif  results.md  soft  tcp-socat-qrexec-socat-tcp  tcp-socat-qrexec-stdio
benchmarks/glmark2/AMD-Stoney_Debian11/800x600-windowed/: Makefile  gls-eth-1Gb  gls-loopback  native  native-tcp  native-tcp-eventfdnotif  native-tcp-pipenotif  results.md
common/: bufpool.h  fastlog.h  fifo.c  fifo.h  gls_command.h  gls_command_egl.h  gls_command_gles2.h  ltt_api.c  ltt_api_tp.h  ltt_ring.c  ltt_ring_tp.h  ltt_tport.c  ltt_tport_tp.h  ltt_wrappers.c  ltt_wrappers.h  notifier.h  recvr.c  recvr.h  ring.c  ring.h  server.c  server.h  transport-qrexecpipe.c  transport-qubesvchan.c  transport-stdio.c  transport-tcp.c  transport-unix.c  transport-xenvchan.c  transport.c  transport.h  utils.h  xmitr-shm.c  xmitr-stream.c  xmitr.h
common/wireshark/: gls.lua
doc/: INTERNALS.md  README.shodruky-rhyammer.md  TODO.md  USAGE.md  software-support.md
gl_client/: Android.mk  Makefile  clientegl.c  clientgles.c  getprocaddr.c  glclient.c  glclient.h  main.c  meson.build  todo_add.txt
gl_client/include/GLES2/: gl2.h
gl_client/samples/: Makefile  glsutil.c  sample1.c  sample2  sample2.c
gl_server/: Android.mk  Makefile  glcontrol.c  glcontrol.h  glserver.c  glserver.h  main.c  main.h  meson.build  serveregl.c  servergles.c
qubes-os/: qubes.GLS
